[package]
name = "solana-transaction-status"
version = "1.8.14"
description = "Solana transaction status types"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-transaction-status"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.1"
bs58 = "0.3.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
log = "0.4.11"
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
solana-account-decoder = { git = "https://github.com/solindex/account-decoder.git", version = "=1.8.14" }
solana-measure = { git = "https://github.com/solindex/measure.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-vote-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
